updated with static A*